[FIX[ Reduce text size on mobile

--- a/src/app.css
+++ b/src/app.css
@@ -44,9 +44,7 @@
 }
 
 .btn {
-  @apply h-16 h-16 font-eight-bit bg-poker-darker-green text-white text-xl uppercase text-center px-8 py-4 w-7/8 md:w-2/3 lg:w-1/2 rounded-lg transition-all duration-150 ease-in-out;
-
-
+  @apply h-16 h-16 font-eight-bit bg-poker-darker-green text-white text-xs md:text-xl text-center px-8 py-4 w-7/8 md:w-2/3 lg:w-1/2 rounded-lg transition-all duration-150 ease-in-out;
 
   &:disabled {
     @apply bg-white/20 text-white/40;
@@ -60,7 +58,7 @@
 
   @media (hover: none) and (pointer: coarse) {
     &:active,
-    &:focus {
+    &:focus:active{
       @apply bg-poker-darker-green/80 scale-95;
     }
   }
@@ -69,8 +67,7 @@
 .btn.btn-primary {
   @apply border-2 border-poker-green;
   &:active,
-  &:focus:active,
-  &:focus-visible {
+  &:focus:active {
     @apply bg-poker-green scale-95;
   }
 }
@@ -79,8 +76,7 @@
   @apply border-2 border-red;
   
   &:active,
-  &:focus:active,
-  &:focus-visible {
+  &:focus:active {
     @apply bg-red scale-95;
   }
 }
